--- a/blog/templates/categoria/listar.html
+++ b/blog/templates/categoria/listar.html
@@ -93,34 +93,67 @@ Todas las categorías
         </div>
     </div>
     <nav class="col-lg-6 offset-lg-3 mt-4 d-flex justify-content-center">
+
         <ul class="pagination">
             {% if categorias.has_previous %}
             <li class="page-item">
-                <a class="page-link prev" href="?pagina={{ categorias.previous_page_number }}">Previous</a>
+                <a class="page-link prev"
+                    href="?pagina={{ categorias.previous_page_number }}">Anterior</a>
             </li>
             {% else %}
             <li class="page-item disabled">
-                <a class="page-link " href="#">Previous</a>
+                <a class="page-link " href="#">Anterior</a>
             </li>
             {% endif %}
 
+            {% if categorias.number|add:'-3' > 1 %}
+                <li class="page-item">
+                    <a class="page-link" href="?pagina=1">1</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?pagina={{ categorias.number|add:'-3' }}">&hellip;</a>
+                </li>
+            {% elif categorias.number|add:'-3' == 1  %}
+                <li class="page-item">
+                    <a class="page-link" href="?pagina=1">1</a>
+                </li>
+            {% endif %}
             {% for i in categorias.paginator.page_range %}
-            <li class=" page-item {% if categorias.number == i %}active{% endif %}">
-                <a class="page-link" href="?pagina={{ i }}">{{ i }}</a>
-            </li>
+                {% if categorias.number == i %}
+                    <li class="page-item active">
+                        <a class="page-link" href="?pagina={{i}}">{{i}}</a>
+                    </li>
+                {% elif i > categorias.number|add:'-3' and i < categorias.number|add:'3' %} 
+                    <li class="page-item">
+                        <a class="page-link" href="?pagina={{ i }}">{{ i }}</a>
+                    </li>
+                {% endif %}
             {% endfor %}
-
+            {% if categorias.paginator.num_pages > categorias.number|add:'3' %}
+                <li class="page-item">
+                    <a class="page-link" href="?pagina={{ categorias.number|add:'3' }}">&hellip;</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?pagina={{ categorias.paginator.num_pages }}">{{ categorias.paginator.num_pages }}</a>
+                </li>
+            {% elif categorias.paginator.num_pages == categorias.number|add:'3' %}
+                <li class="page-item">
+                    <a class="page-link" href="?pagina={{ categorias.paginator.num_pages }}">{{ categorias.paginator.num_pages }}</a>
+                </li>
+            {% endif %}
             {% if categorias.has_next %}
-            <li class="page-item">
-                <a class="page-link next" a href="?pagina={{ categorias.next_page_number }}">Next</a>
-            </li>
+                <li class="page-item">
+                    <a class="page-link next"
+                        href="?pagina={{ categorias.next_page_number }}">Siguiente</a>
+                </li>
             {% else %}
             <li class="page-item disabled">
-                <a class="page-link" href="#">Next</a>
+                <a class="page-link" href="#">Siguiente</a>
             </li>
             {% endif %}
-
         </ul>
+
+
     </nav>
 </div>
 {% endblock contenido %}
